test/types/records/split-init/split-init-type-from-var.chpl
proc main() {
  var x:int;
  type t;
  t = x;
}
